--- a/Chapter9.Rmd
+++ b/Chapter9.Rmd
@@ -9,6 +9,8 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(rethinking)
 ```
 
 ## 8E1
@@ -23,3 +25,187 @@ Which of the following is a requirement of the simple Metropolis algorithm?
 Gibbs sampling is more efficient than the Metropolis algorithm. How does it achieve this extra efficiency? Are there any limitations to the Gibbs sampling strategy?
 
 Gibbs sampling uses "smarter" proposals to characterize the posterior distribution with fewer samples than a classic metropolis algorithm. It does this with conjugate prior-likelihood pairs, which are analytically tractable.
+
+
+## 8E3 
+
+Which sort of parameters can Hamiltonian Monte Carlo not handle? Can you explain why?
+
+HMC can't handle discrete parameters, because it can't calculate a gradient across categories. 
+
+
+## 8M1
+
+Re-estimate the terrain ruggedness model from the chapter, but now using a uniform prior and an exponential prior for the standard deviation, sigma. The uniform prior should be dunif(0,10) and the exponential should be dexp(1). Do the different priors have any detectible influence on the posterior distribution?
+
+```{r}
+
+data(rugged)
+d <- rugged
+d$log_gdp <- log(d$rgdppc_2000)
+dd <- d[ complete.cases(d$rgdppc_2000) , ]
+dd$log_gdp_std <- dd$log_gdp / mean(dd$log_gdp)
+dd$rugged_std <- dd$rugged / max(dd$rugged)
+dd$cid <- ifelse( dd$cont_africa==1 , 1 , 2 )
+
+dat_slim <- list(
+    log_gdp_std = dd$log_gdp_std,
+    rugged_std = dd$rugged_std,
+    cid = as.integer( dd$cid )
+)
+str(dat_slim)
+
+m9.1a <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dexp( 1 )
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+
+m9.1b <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dcauchy( 0 , 1 )
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+
+m9.1c <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dunif( 0, 10 )
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+
+precis(m9.1a, depth = 2)
+precis(m9.1b, depth = 2)
+precis(m9.1c, depth = 2)
+
+
+```
+
+Altering these priors does not have any impact on the estimates of the posterior.
+
+
+## 8M2
+
+The Cauchy and exponential priors from the terrain ruggedness model are very weak. They can be made more informative by reducing their scale. Compare the dcauchy and dexp priors for progressively smaller values of the scaling parameter. As these priors become stronger, how does each influence the posterior distribution?
+
+```{r}
+m9.1d <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dexp( 1)
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+
+
+m9.1e <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dexp( 0.1)
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+
+
+m9.1f <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dexp( 0.01)
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+
+precis(m9.1d, depth = 2)
+precis(m9.1e, depth = 2)
+precis(m9.1f, depth = 2)
+
+m9.1g <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dcauchy( 0, 1)
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+m9.1h <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dcauchy( 0, 0.1)
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+m9.1i <- ulam(
+    alist(
+        log_gdp_std ~ dnorm( mu , sigma ) ,
+        mu <- a[cid] + b[cid]*( rugged_std - 0.215 ) ,
+        a[cid] ~ dnorm( 1 , 0.1 ) ,
+        b[cid] ~ dnorm( 0 , 0.3 ) ,
+        sigma ~ dcauchy( 0, 0.01)
+),
+data=dat_slim , chains=4 , cores=4 , iter=1000 )
+
+precis(m9.1g, depth = 2)
+precis(m9.1h, depth = 2)
+precis(m9.1i, depth = 2)
+
+```
+
+Varying the exponenetial prior on sigma didn't have a big effect. Same with the Cauchy prior. Maybe I'm not varying them enough?
+
+## 8H1
+
+Run the model below and then inspect the posterior distribution and explain what it is accomplishing.
+
+```{R} 
+# R code 9.26
+mp <- ulam(alist(a ~ dnorm(0,1),
+                     b ~ dcauchy(0,1)),
+               data=list(y=1),
+               start=list(a=0,b=0),
+               chains=4 , cores=4 , iter=1000 )
+
+pairs(mp)
+traceplot(mp)
+```
+Compare the samples for the parameters a and b. Can you explain the different trace plots, using what you know about the Cauchy distribution?
+
+The model is sampling from a normal distribution and a cauchy distribution. The Cauchy distribution holds most of it's probability near the mean, but has long fat tails, so it produces a spiky caterpillar. 
+
+## 8H2
+
+Recall the divorce rate example from Chapter5. Repeat that analysis, usingmap2stanthistime, fitting models m5.1, m5.2, and m5.3.  Use compare to compare the models on the basis of WAIC. Explain the results.
+
+```{R}
+
+```
+
+
+
+## optional: 8H6
+
+Modify the Metropolis algorithm code from the chapter to write your own simple MCMCestimator for globe tossing data and model from Chapter2.
+
+
+
+
+
